--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "test.watch": "stencil test --spec --e2e --watchAll"
   },
   "devDependencies": {
-    "@stencil/core": "1.0.0-beta.5"
+    "@stencil/core": "1.0.0-beta.5",
+    "@stencil/sass": "^0.2.3"
   },
   "license": "MIT"
 }
