--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "@stencil/core": "1.0.0-beta.5",
     "@stencil/sass": "^0.2.3"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "ionicons": "^4.5.8"
+  }
 }
