--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
   "name": "aln-tags-input",
   "version": "0.0.1",
-  "description": "Stencil Component Starter",
+  "description": "A stencil component for tags input",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "es2015": "dist/esm/index.mjs",
   "es2017": "dist/esm/index.mjs",
-  "types": "dist/types/index.d.ts",
+  "types": "dist/types/components.d.ts",
   "collection": "dist/collection/collection-manifest.json",
   "collection:main": "dist/collection/index.js",
   "unpkg": "dist/aln-tags-input/aln-tags-input.js",
   "files": [
-    "dist/",
-    "loader/"
+    "dist/"
   ],
   "scripts": {
     "build": "stencil build --docs",
