--- a/package.json
+++ b/package.json
@@ -24,9 +24,7 @@
     "@stencil/sass": "^0.2.3"
   },
   "license": "MIT",
-  "dependencies": {
-    "ionicons": "^4.5.8"
-  },
+  "dependencies": {},
   "keywords": [
     "Web components",
     "Tag",
