--- a/package.json
+++ b/package.json
@@ -30,5 +30,9 @@
     "Tag",
     "Ionic",
     "Stencil"
-  ]
+  ],
+  "author": {
+    "name": "An Linh",
+    "email": "ngthienlinh@gmail.com"
+  }
 }
