--- a/package.json
+++ b/package.json
@@ -34,5 +34,9 @@
   "author": {
     "name": "An Linh",
     "email": "ngthienlinh@gmail.com"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ngthienlinh/aln-tags-input.git"
   }
 }
